productset page fixed alignments

--- a/static_files/scss/jack-jones.scss
+++ b/static_files/scss/jack-jones.scss
@@ -33,6 +33,8 @@
     .productsetdetail {
         background: none;
     }
+
+
 }
 
 #branded.pt_productdetails .productset {
@@ -45,4 +47,16 @@
             background: none;
         }
     }
+    
+
+    div.productsetdetail {
+        .grid_10 {
+            width: 258px;
+            background-image: none;
+        }
+    }
+    
 }
+
+
+
